<resources>
    <string name="app_name">AppGlobal</string>
    <string name="text_title">Information Form</string>
    <string name="hint_HoTen">Input full name</string>
    <string name="hint_Email">Input email</string>
    <string name="hint_SDT">Input phone number</string>
    <string name="text_XacNhan">Confirm</string>
    <string name="textChaoBan">Hello</string>
    <string name="text_Email" translatable="false">Email</string>
    <string name="textSDT">Phone number</string>
</resources>


